Changed double quotes to single, added icon

--- a/source/potato.html
+++ b/source/potato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potato Timer</title>
     <link rel="stylesheet" href="potatoTheme.css">
+    <link rel="icon" type="image/png" href="img/potatoIcon.png">
     <script src="app.js"></script>
 </head>
 
