Cleaned the css styling of hide and show func

--- a/source/potato.html
+++ b/source/potato.html
@@ -34,13 +34,10 @@
         <div id="mainTasks">
 
         </div>
-
-        <ul id ="allTasks">
-
         <!-- End of content wrapper -->
     </div>
 
-    <div class="menu" id="settingsMenu">
+    <div class="menu hidden" id="settingsMenu">
         <p>Settings</p>
         <p class="close" id="closeSettings">Close</p>
         <div id="chooseTheme">
@@ -80,7 +77,7 @@
         <!-- End of settings menu -->
     </div>
 
-    <div class="menu" id="taskMenu">
+    <div class="menu hidden" id="taskMenu">
         <p id="taskMenuTasks">Tasks</p>
         <p class="close" id="closeTasks">Close</p>
         <p id="deleteAll">Delete All</p>
@@ -89,7 +86,7 @@
         </div>
     </div>
 
-    <div class="menu" id="prompt">
+    <div class="menu hidden" id="prompt">
         <div id="confirmMessage">Unexpected Error</div>
         <button id="confirm">Confirm</button>
         <button id="cancel">Cancel</button>
