--- a/source/potato.html
+++ b/source/potato.html
@@ -24,7 +24,7 @@
         <div class="buttonWrapper">
             <button id="reset" onclick="confirmationPrompt('Reset')">Reset</button>
             <button id="start" onclick="start()">Start</button>
-            <button id="tasks" onclick="show('taskMenu')">Tasks</button>
+            <button id="taskBtn" onclick="show('taskMenu')">Tasks</button>
         </div>
 
         <div class="taskContainer">
@@ -50,27 +50,27 @@
         <div class="userInputContainer">
             <div>
                 <label for="work" class="fieldLabel">Work Time</label>
-                <input type="number" class="customTime" id="workMin" value="25">
+                <input type="number" class="customTime" id="workMin" value="25" min="0" max="59" maxlength="2">
                 <p>:</p>
-                <input type="number" class="customTime" id="workSec" value="00">
+                <input type="number" class="customTime" id="workSec" value="00" min="0" max="59" maxlength="2">
             </div>
 
             <div>
                 <label for="shortBreak" class="fieldLabel">Short Break</label>
-                <input type="number" class="customTime" id="shortMin" value="5">
+                <input type="number" class="customTime" id="shortMin" value="5" min="0" max="59" maxlength="2">
                 <p>:</p>
-                <input type="number" class="customTime" id="shortSec" value="00">
+                <input type="number" class="customTime" id="shortSec" value="00" min="0" max="59" maxlength="2">
             </div>
 
             <div>
                 <label for="longBreak" class="fieldLabel">Long Break</label>
-                <input type="number" class="customTime" id="longMin" value="25">
+                <input type="number" class="customTime" id="longMin" value="25" min="0" max="59" maxlength="2">
                 <p>:</p>
-                <input type="number" class="customTime" id="longSec" value="00">
+                <input type="number" class="customTime" id="longSec" value="00" min="0" max="59" maxlength="2">
             </div>
             <div>
                 <label for="volume" class="fieldLabel">Volume (%)</label>
-                <input type="number" class="customVolume" id="volume" value="50">
+                <input type="number" class="customVolume" id="volume" value="50" min="0" max="100" maxlength="3">
                 <img src="img/volume.png" alt="Mute?" id="volumeIcon">
             </div>
         </div>
