Added language dropdown to potato theme

--- a/source/potato.html
+++ b/source/potato.html
@@ -94,6 +94,18 @@
         <button id="confirm" onclick="confirm()">Confirm</button>
         <button id="cancel" onclick="cancel()">Cancel</button>
     </div> -->
+<!-- drop down menu for the language options>
+     </div> -->
+     
+     <div class="dropdown">
+        <button class="languageBtn">Language</button>
+        <div class="dropdown-content">
+          <a href="#">Language 1</a>
+          <a href="#">Language 2</a>
+          <a href="#">Language 3</a>
+        </div>
+      </div>
+
 </body>
 
 
