update id field for language options

--- a/source/potato.html
+++ b/source/potato.html
@@ -100,20 +100,21 @@
      <div class="dropdown">
         <button class="languageBtn">Language</button>
         <div class="dropdown-content">
-          <a href="#">Language 1</a>
-          <a href="#">Language 2</a>
-          <a href="#">Language 3</a>
+          <a id="#ToBeAdded">Language 1</a>
+          <a id="#ToBeAdded">Language 2</a>
+          <a id="#ToBeAdded">Language 3</a>
         </div>
       </div>
 
+ <!-- Instruction menu>
+     </div> -->     
+     <div class="menu" id="instructionsMenu">
+        <p>Instructions</p>
+        <p>text to create </p>
+     </div>
+
+
 </body>
-
-
-
-
-
-
-
 
 <script>
     window.onload = function () {
