--- a/source/potato.html
+++ b/source/potato.html
@@ -108,12 +108,12 @@
     </div>
 
     <div class="dropdown">
-        <button class="languageBtn">Language</button>
+        <button class="languageBtn" id="languageBtn">Language</button>
         <div class="dropdown-content">
           <button id="English" onclick="setLang('en')">English</button>
-          <button id="Chinese" onclick="setLang('cn')">中文</button>
+          <button id="Chinese" onclick="setLang('zh')">中文</button>
           <button id="Spanish" onclick="setLang('es')">Español</button>
-          <button id="Korean" onclick="setLang('kr')">한국어</button>
+          <button id="Korean" onclick="setLang('ko')">한국어</button>
         </div>
       </div>
 </body>
