modify css alignment and spacing

--- a/source/potato.html
+++ b/source/potato.html
@@ -45,11 +45,11 @@
     </div>
 
     <div class="menu hidden" id="settingsMenu">
-        <div class="headerDark" id="settingsMenuHeader">Drag Me!</div>
+        <div class="headerDark" id="settingsMenuHeader"></div>
         <p id="settingsTitle">Settings</p>
         <p class="close" id="closeSettings">Close</p>
         <div id="chooseTheme">
-            <p style="margin: 0 0; font-size: 18px;" id="selectTheme">Select a Theme</p>
+            <p style="margin: 0 0; font-size: 18px;" id="selectTheme">Select a Theme</p><br>
             <button id="lightTheme" onclick="changeTheme('Light')">Light</button>
             <button id="darkTheme"  onclick="changeTheme('Dark')">Dark</button>
             <button id="potatoTheme" onclick="changeTheme('Potato')">Potato</button>
@@ -92,13 +92,13 @@
     </div>
 
     <div class="menu hidden" id="taskMenu">
-        <p id="taskMenuTasks">Tasks</p>
+        <p id="taskMenuTasks" style = "font-size: 35px;">Tasks</p>
         <p class="close" id="closeTasks">Close</p>
         <p id="deleteAll">Delete All</p>
         <p class="taskHelp">Mark a task as complete. Pin a task to the main display. </p>
         <div id="taskListContainer">
 
-        </div>
+        </div><br>
     </div>
 
     <div class="hidden themeDark" id="prompt">
