added spacing at bottom of page

--- a/source/potato.html
+++ b/source/potato.html
@@ -40,7 +40,7 @@
         </div>
         <div id="mainTasks">
 
-        </div>
+        </div><br>
         <!-- End of content wrapper -->
     </div>
 
