-fix the three button alignment porblems -adjust alignments -change the header of task close #47

--- a/source/potato.html
+++ b/source/potato.html
@@ -92,7 +92,9 @@
     </div>
 
     <div class="menu hidden" id="taskMenu">
-        <p id="taskMenuTasks" style = "font-size: 35px;">Tasks</p>
+        <div class="headerDark" id="settingsMenuHeader"></div>
+        <p id="tasksTitle">Tasks</p>
+        <!-- <p id="taskMenuTasks" style = "font-size: 35px;">Tasks</p> -->
         <p class="close" id="closeTasks">Close</p>
         <p id="deleteAll">Delete All</p>
         <p class="taskHelp">Mark a task as complete. Pin a task to the main display. </p>
