fixed several alignment issues

--- a/source/potato.html
+++ b/source/potato.html
@@ -92,7 +92,7 @@
     </div>
 
     <div class="menu hidden" id="taskMenu">
-        <div class="headerDark" id="settingsMenuHeader"></div>
+        <div class="headerDark" id="taskMenuHeader"></div>
         <p id="tasksTitle">Tasks</p>
         <!-- <p id="taskMenuTasks" style = "font-size: 35px;">Tasks</p> -->
         <p class="close" id="closeTasks">Close</p>
