Upload images, set language bar

--- a/source/potato.html
+++ b/source/potato.html
@@ -109,13 +109,28 @@
         <button id="cancel">Cancel</button>
     </div>
 
-    <div class="dropdown">
-        <button class="languageBtn" id="languageBtn">Language</button>
+    <!-- <div class="dropdown">
+        <button class="languageBtn" id="languageBtn"><img src="img/globe.png"></button>
         <div class="dropdown-content">
           <button id="English" onclick="setLang('en')">English</button>
           <button id="Chinese" onclick="setLang('zh')">中文</button>
           <button id="Spanish" onclick="setLang('es')">Español</button>
           <button id="Korean" onclick="setLang('ko')">한국어</button>
         </div>
-      </div>
+    </div> -->
+
+    <img src="img/potato-dance.gif" id="cycle1">
+    <img src="img/potato-dance.gif" id="cycle2">
+    <img src="img/potato-dance.gif" id="cycle3">
+    <img src="img/potato-dance.gif" id="cycle4">
+
+    <div class="footer">
+        <span id="langContainer">
+            <button id="English" onclick="setLang('en')">English</button>
+            <button id="Spanish" onclick="setLang('es')">Español</button>
+            <button id="Chinese" onclick="setLang('zh')">中文</button>
+            <button id="Korean" onclick="setLang('ko')">한국어</button>
+        </span>
+        <a href="https://github.com/AlexisChen99/cse110-w21-group4"><img src="img/GitHub-Mark-32px.png"></a>
+    </div>
 </body>
