Component works with cssCleanup updates

--- a/source/potato.html
+++ b/source/potato.html
@@ -107,15 +107,16 @@
         <button id="cancel">Cancel</button>
     </div>
 
-    <div class="dropdown">
-        <button class="languageBtn" id="languageBtn">Language</button>
-        <div class="dropdown-content">
+    <div class="footer">
+        <span id="langContainer">
             <button id="English" onclick="setLang('en')">English</button>
-            <button id="Chinese" onclick="setLang('zh')">中文</button>
             <button id="Spanish" onclick="setLang('es')">Español</button>
+            <button id="Chinese" onclick="setLang('zh')">中文</button>
             <button id="Korean" onclick="setLang('ko')">한국어</button>
-        </div>
+        </span>
+        <a href="https://github.com/AlexisChen99/cse110-w21-group4"><img src="img/GitHub-Mark-32px.png"></a>
     </div>
+
 
     <!-- Remove hidden and fix css -->
     <div class="menu hidden" id="instrMenu">
@@ -127,6 +128,4 @@
         <span id="page">1 of 5</span>
         <button id="next">Next</button>
     </div>
-
-    <img style="position: absolute; top: 70%; z-index: 9999;" src="img/test.gif">
 </body>
