showed potatos less naively

--- a/source/potato.html
+++ b/source/potato.html
@@ -119,10 +119,10 @@
         </div>
     </div> -->
 
-    <img src="img/potato-dance.gif" id="cycle1">
-    <img src="img/potato-dance.gif" id="cycle2">
-    <img src="img/potato-dance.gif" id="cycle3">
-    <img src="img/potato-dance.gif" id="cycle4">
+    <img src="img/potato-dance.gif" id="cycle1" class="hidden">
+    <img src="img/potato-dance.gif" id="cycle2" class="hidden">
+    <img src="img/potato-dance.gif" id="cycle3" class="hidden">
+    <img src="img/potato-dance.gif" id="cycle0" class="hidden">
 
     <div class="footer">
         <span id="langContainer">
